# better-anki

./: Cargo.toml  ROADMAP.md
better-anki-app/: package-lock.json  package.json
better-anki-app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
better-anki-app/frontend-dist/: index.html
better-anki-app/frontend-dist/assets/: index-CtUakK-d.css  index-rTv1V3aM.js
better-anki-app/frontend/src/: App.tsx  index.css
better-anki-app/frontend/src/components/decks/: DeckCard.tsx  DeckList.tsx
better-anki-app/frontend/src/components/study/: CardSwipe.tsx  FlashCard.tsx  RatingButtons.tsx  StudySession.tsx
better-anki-app/frontend/src/components/ui/: Button.tsx
better-anki-app/frontend/src/hooks/: useDecks.ts  useStudySession.ts
better-anki-app/frontend/src/lib/: tauri.ts
better-anki-app/frontend/src/stores/: sessionStore.ts
better-anki-app/src-tauri/: Cargo.toml  tauri.conf.json
better-anki-app/src-tauri/src/: main.rs  state.rs
better-anki-app/src-tauri/src/commands/: collection.rs  decks.rs  mod.rs  study.rs
